[project]
name = "OpenDeepSearch"
version = "0.1.0"
authors = [
    { name = "Salaheddin Alzu'bi", email = "salaheddinalzubi@gmail.com" },
]

dependencies = [
 "crawl4ai>=0.6.0",
 "smolagents>=1.19.0",
 "openai",
 "datasets",
 "transformers",
 "litellm",
 "langchain",
 "fasttext-wheel",
 "wikipedia-api",
 "pillow",
 "gradio",
]
requires-python = ">=3.13"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
